--- a/src/old/index.html
+++ b/src/old/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Derp</title>
+    <title>Squared</title>
     <style>
       body {
         margin: 0;
@@ -24,10 +24,9 @@
     </style>
   </head>
   <body>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-
-    <script src="./color.js"></script>
-    <script src="./utils.js"></script>
-    <script src="./sketch.js"></script>
+      
+    <script src="/old/sketch.js"></script>
   </body>
 </html>
